08-Ingress/grade-submission-portal/grade-submission-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal  ## Uniquely identifies the service
  namespace: grade-submission
spec:
  type: ClusterIP  ## Exposes the service on each Node's IP at a static port
  selector:
    app.kubernetes.io/instance: grade-submission-portal  ## Selects pods with this label
  ports:
  - port: 5001 ## Port on which the service is exposed, internal
    targetPort: 5001  ## Port on the pod to which traffic is directed
